--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
     "axios": "^1.2.0",
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
+    "fs-extra": "^10.1.0",
     "sharp": "^0.31.2"
   }
 }
